# rsbd

./: .gitmodules  CMakeLists.txt  Design.md  README.md
protos/: rsbd.proto
src/: CMakeLists.txt  binary.h  block.cpp  block.h  block_storage.h  block_storage_sync.h  rsbd.cpp  single_file_block_storage.h
test/: CMakeLists.txt  main.cpp  test_block.cpp  test_sync.cpp
